fixed navbar and pagination on mobile

--- a/src/Menu/Menu.scss
+++ b/src/Menu/Menu.scss
@@ -19,6 +19,11 @@
     }
     
 }
+.mutag{
+    margin-left: 65%;
+    color: black;
+    text-decoration: none;
+}
 .text{
     color: black;
     text-decoration: none;
