--- a/src/Shop/Shop.scss
+++ b/src/Shop/Shop.scss
@@ -32,7 +32,7 @@
     .active{
         background-color:lightblue;
         border-radius: 50px;
-        width: 40px;
+        width: 20px;
     }
     a{
         outline: none;
@@ -55,6 +55,20 @@
 }
  @media screen and (max-width : 750px) {
      .MuiFormControl-root{
-         width: 130px;
+         width: 120px;
+         left: 0;
+     }
+     .pagination{
+         width: 298px;
+         display: inline-flex;
+         margin-right: 20%;
+         justify-content: space-between;
+         li{
+             width: 38px;
+            
+         }
+         .active{
+             width: 20px;
+         }
      }
  }
